--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ secret.txt
 test_search.py
 get_messi_locations.py
 get_ronaldo_locations.py
+*.avi
+generate_messi_wordcloud.ipynb
+generate_messi_wordcloud.py
+.ipynb_checkpoints
+*.png
+*.jpg
+Reporting
