UPDATE Readme : ADD results

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ get_ronaldo_locations.py
 generate_messi_wordcloud.ipynb
 generate_messi_wordcloud.py
 .ipynb_checkpoints
-*.png
 *.jpg
 Reporting
+Commands before launching power BI.PNG
